Make bufferedAmount unsigned long long

WebSocket bufferedAmount is defined in the HTML standard as being
unsigned long long
(https://html.spec.whatwg.org/#the-websocket-interface), but Blink has
been using "unsigned long" for this value.

Change to "unsigned long long". This also permits us to remove the check
for overflow.

BUG=631004

Change-Id: I6c6cc356d9b3c425306376e210b9df7a3be13998
Reviewed-on: https://chromium-review.googlesource.com/1037105
Commit-Queue: Adam Rice <ricea@chromium.org>
Reviewed-by: Yutaka Hirano <yhirano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557114}
Former-commit-id: b450ddb8349f62bea05765ab5e7fb1de960664c7