third_party/blink/renderer/modules/websockets/dom_websocket.h
@@ -103,7 +103,7 @@ class MODULES_EXPORT DOMWebSocket : public EventTargetWithInlineData,
 
   const KURL& url() const;
   State readyState() const;
-  unsigned bufferedAmount() const;
+  uint64_t bufferedAmount() const;
 
   String protocol() const;
   String extensions() const;
